--- a/mondo3.html
+++ b/mondo3.html
@@ -13,7 +13,7 @@
     <a-marker type="pattern" url="patterns/pattern-marker.patt">
         <a-entity position="0 0 0" scale="0.02 0.02 0.02"
             obj-model="obj: url(/media/Earth.obj);"
-              animation="property: rotation; dur: 5000; to: 0 360 0; loop: true; easing: linear;"
+              animation="property: rotation; dur: 5000; to: 0 720 0; loop: false; easing: linear;"
              <a-entity material="src: url(/media/Earth_Diffuse.jpeg);"></a-entity>
             > </a-entity>
          <a-entity id="pin" visible="false" position="0 1.2 0" scale="0.2 0.2 0.2">
