--- a/allestimento.html
+++ b/allestimento.html
@@ -17,7 +17,7 @@
             <a-entity
             position="0 0 0"
             scale="0.026 0.026 0.026"
-            obj-model="obj: url(/media/al.obj);mtl: url(/media/al.mtl);"
+            obj-model="obj: url(/media/al.obj);"
             > </a-entity>
         </a-marker>
 
