--- a/allestimento.html
+++ b/allestimento.html
@@ -17,7 +17,7 @@
             <a-entity
             position="0 0 0"
             scale="0.026 0.026 0.026"
-            obj-model="obj: url(/media/allestimentoo.obj);mtl: url(/media/allestimentoo.mtl);"
+            obj-model="obj: url(/media/alle.obj);mtl: url(/media/alle.mtl);"
             > </a-entity>
         </a-marker>
 
