--- a/allestimento2.html
+++ b/allestimento2.html
@@ -21,6 +21,13 @@
             > </a-entity>
         </a-marker>
 
+         <a-entity
+            position="0 0.01 0" <!-- Posizione del percorso rispetto al marker -->
+            scale="0.05 0.05 0.05" <!-- Scala del percorso -->
+            obj-model="obj: url(/media/percorso.obj); mtl: url(/media/percorso.mtl);"
+            animation__fade="property: components.material.material.opacity; from: 0; to: 1; dur: 2000; startEvents: markerFound;" 
+        ></a-entity>
+
         <a-entity camera></a-entity>
 
     </a-scene>
